ERROR:../src/nautilus-file-operations.c:4391:get_unique_target_file: assertion failed: (basename == NULL)
Affected version
- Fedora 36 and Fedora 37, 100% reproducibility on both
Steps to reproduce
- open MTP Android phone storage
- duplicate a file by holding Ctrl and dragging
Current behavior
crash
Expected behavior
file gets duplicated
Additional information
very likely caused by a fix from #2376 (closed)
stderr:
ERROR:../src/nautilus-file-operations.c:4391:get_unique_target_file: assertion failed: (basename == NULL)
Bail out! ERROR:../src/nautilus-file-operations.c:4391:get_unique_target_file: assertion failed: (basename == NULL)
backtrace:
#0 __pthread_kill_implementation (threadid=<optimized out>, signo=signo@entry=6, no_tid=no_tid@entry=0) at pthread_kill.c:44
#1 0x00007ffff6a8ec53 in __pthread_kill_internal (signo=6, threadid=<optimized out>) at pthread_kill.c:78
#2 0x00007ffff6a3e956 in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26
#3 0x00007ffff6a287f4 in __GI_abort () at abort.c:79
#4 0x00007ffff7e75d18 in g_assertion_message (domain=<optimized out>, file=0x555555670f88 "../src/nautilus-file-operations.c", line=<optimized out>, func=<optimized out>, message=<optimized out>)
at ../glib/gtestutils.c:3253
#5 0x00007ffff7ed5bae in g_assertion_message_expr
(domain=domain@entry=0x0, file=file@entry=0x555555670f88 "../src/nautilus-file-operations.c", line=line@entry=4391, func=func@entry=0x55555568bdb0 <__func__.10> "get_unique_target_file", expr=expr@entry=0x55555568b6dd "basename == NULL") at ../glib/gtestutils.c:3279
#6 0x00005555556666f6 in get_unique_target_file.constprop.0 (src=0x555555f9b390, dest_dir=0x555556064950, dest_fs_type=0x0, count=1, same_fs=<optimized out>) at ../src/nautilus-file-operations.c:4391
#7 0x00005555555c426f in copy_move_file
(copy_job=0x55555619fc00, src=0x555555f9b390, dest_dir=0x555556064950, same_fs=1, unique_names=1, dest_fs_type=0x7fffce15fa38, source_info=0x7fffce15fa40, transfer_info=0x7fffce15fa60, debuting_files=0x555555856d20, overwrite=0, skipped_file=0x7fffce15fa2c, readonly_source_fs=0) at ../src/nautilus-file-operations.c:5420
#8 0x00005555555c5fec in copy_files (transfer_info=0x7fffce15fa60, source_info=0x7fffce15fa40, dest_fs_id=0x5555561595a0 "mtp:host=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX", job=0x55555619fc00)
at ../src/nautilus-file-operations.c:5957
#9 nautilus_file_operations_copy (task=<optimized out>, source_object=<optimized out>, task_data=0x55555619fc00, cancellable=<optimized out>) at ../src/nautilus-file-operations.c:6104
#10 0x00007ffff7203c43 in g_task_thread_pool_thread (thread_data=0x555555c7a190, pool_data=<optimized out>) at ../gio/gtask.c:1452
#11 0x00007ffff7ed8d02 in g_thread_pool_thread_proxy (data=<optimized out>) at ../glib/gthreadpool.c:354
#12 0x00007ffff7ed6302 in g_thread_proxy (data=0x555555ce0c60) at ../glib/gthread.c:827
#13 0x00007ffff6a8cdcd in start_thread (arg=<optimized out>) at pthread_create.c:442
#14 0x00007ffff6b12630 in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81