file-operations: Fix inverted g_assert condition

The commit e2969a9c29d0d171038fcb35d8baa5a7df372191 introduced an assertion
statement to ensure that the `g_file_get_basename` returned non-NULL string.
Unfortunately, the assertion has an inverted condition. This leads to crashes
in the `get_unique_target_file` function for files that don't have the
`edit-name` attribute set (i.e just a few GVfs backends). Let's fix the
inverted condition.

Fixes: https://gitlab.gnome.org/GNOME/nautilus/-/issues/2825


(cherry picked from commit fcf8f9de8336549f6395c440a9be983849254b31)